Update screenshots,polybar and add i3lock

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -17,7 +17,7 @@
 ;==========================================================
 
 [colors]
-background = #00000000
+background = #111111
 foreground = #D8DEE9
 white      = #D8DEE9
 black      = #0f0f0f
@@ -32,11 +32,11 @@ orange     = #ff3a0f
 
 [bar/main]
 monitor = HDMI1
-width = 100%
-height = 22
-;offset-x = 1%
-;offset-y = 1%
-radius = 0.0
+width = 55%
+height = 28
+offset-x = 22.5%
+offset-y = 1%
+radius = 2.0
 fixed-center = true
 bottom = false
 
@@ -63,22 +63,22 @@ border-right-color = ${colors.cyan}
 padding-left = 0
 padding-right = 3
 
-module-margin-left = 3
-module-margin-right = 3
+module-margin-left = 2
+module-margin-right = 0
 
 ; The separator will be inserted between the output of each module
-separator = %{F#D8DEE9}|%{F-}
+;separator = %{F#D8DEE9}|%{F-}
 
-font-0 = Roboto:pixelsize=9;2
+font-0 = iosevka:pixelsize=9;2
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=9;1
 font-3 = FontAwesome:pixelsize=9;2
 font-4 = Monaco:pixelsize=9;2
 font-5 = Hack Nerd Font:size=13;2
 
-modules-left = rofi bspwm mpd spotify q
-modules-center = date time 
-modules-right = xwindow kernel eth battery 
+modules-left = rofi bspwm  
+modules-center = mpd spotify xwindow 
+modules-right = date time powermenu
 
 tray-position = right
 tray-padding = 0
@@ -116,11 +116,11 @@ label-focused = %icon% %name%
 label-focused-foreground = ${colors.white}
 
 ;label-focused-underline = ${colors.blue}
-label-focused-padding = 2
+label-focused-padding = 1
 label-occupied = %icon% %index%
 label-occupied-foreground = ${colors.white}
 
-label-occupied-padding = 2
+label-occupied-padding = 1
 label-dimmed-foreground = ${colors.grey}
 label-dimmed-focused = %icon% %index%
 ;label-dimmed-focused-underline = ${colors.blue}
@@ -128,7 +128,7 @@ label-urgent = %icon% %index%
 label-urgent-foreground = ${colors.white}
 
 label-urgent-background = ${colors.red}
-label-urgent-padding = 2
+label-urgent-padding = 1
 label-empty =
 label-empty-padding = 
 ws-icon-1 =1
@@ -174,9 +174,9 @@ bar-empty = ─
 
 [module/rofi]
 type = custom/script 
-label-padding = 2
-label-foreground = ${colors.black}
-label-background = ${colors.orange}
+label-padding = 0
+label-foreground = ${colors.orange}
+;label-background = ${colors.orange}
 interval = 120
 exec = echo "    "
 click-left = "rofi -show drun -theme ~/.config/rofi/themes/sidetab >/dev/null 2>&1 &"
@@ -192,9 +192,9 @@ time = %I:%M:%S %p
 
 ; Label
 label            = %time%
-label-foreground = ${colors.white}
-;label-background = ${colors.blue}
-label-padding    = 2
+label-foreground = ${colors.orange}
+;label-background = ${colors.orange}
+;label-padding    = 2
 
 [module/date]
 type = internal/date
@@ -479,7 +479,7 @@ format-volume = %{F#a6bbc0}<ramp-volume> <label-volume> <bar-volume>%{F-}
 ; Available tokens:
 ;   %percentage% (default)
 label-muted =  muted
-label-muted-foreground = ${colors.blue}
+label-muted-foreground = ${colors.orange}
 
 ; Only applies if <ramp-volume> is used
 ramp-volume-0 = 
@@ -487,15 +487,15 @@ ramp-volume-1 = 
 ramp-volume-2 = 
 
 bar-volume-width = 21
-bar-volume-foreground-0 = ${colors.blue}
-bar-volume-foreground-1 = ${colors.blue}
-bar-volume-foreground-2 = ${colors.blue}
-bar-volume-foreground-3 = ${colors.blue}
-bar-volume-foreground-4 = ${colors.blue}
-bar-volume-foreground-5 = ${colors.blue}
-bar-volume-foreground-6 = ${colors.blue}
-bar-volume-foreground-7 = ${colors.blue}
-bar-volume-foreground-8 = ${colors.blue}
+bar-volume-foreground-0 = ${colors.orange}
+bar-volume-foreground-1 = ${colors.orange}
+bar-volume-foreground-2 = ${colors.orange}
+bar-volume-foreground-3 = ${colors.orange}
+bar-volume-foreground-4 = ${colors.orange}
+bar-volume-foreground-5 = ${colors.orange}
+bar-volume-foreground-6 = ${colors.orange}
+bar-volume-foreground-7 = ${colors.orange}
+bar-volume-foreground-8 = ${colors.orange}
 bar-volume-gradient = false
 bar-volume-indicator = 
 bar-volume-indicator-font = 0
@@ -503,7 +503,7 @@ bar-volume-fill = :
 bar-volume-fill-font = 0
 bar-volume-empty = :
 bar-volume-empty-font = 0
-bar-volume-empty-foreground = ${colors.foreground}
+bar-volume-empty-foreground = ${colors.grey}
 
 [module/keyboard]
 type = internal/xkeyboard
@@ -600,7 +600,7 @@ menu-0-4-exec = menu-open-5
 
 menu-1-0 = %{F#FFD079}%{F-} %{F#D4B06C}Logout%{F-}
 menu-1-0-font = 0
-menu-1-0-exec = bspc quit
+menu-1-0-exec = qdbus org.kde.ksmserver /KSMServer logout 1 3 3
 menu-1-1 =  %{F#A4A4A4}Back%{F-}
 menu-1-1-font = 0
 menu-1-1-exec = menu-open-0
@@ -614,21 +614,21 @@ menu-2-1-exec = menu-open-0
 
 menu-3-0 = %{F#FFD079}%{F-} %{F#D4B06C}Power Off%{F-}
 menu-3-0-font = 0
-menu-3-0-exec = systemctl poweroff
+menu-3-0-exec = qdbus org.kde.ksmserver /KSMServer logout 1 3 3
 menu-3-1 =  %{F#A4A4A4}Back%{F-}
 menu-3-1-font = 0
 menu-3-1-exec = menu-open-0
 
 menu-4-0 = %{F#FFD079}%{F-} %{F#D4B06C}Lock%{F-}
 menu-4-0-font = 0
-menu-4-0-exec = sh /home/lubomir/.config/lock.sh && sleep 1
+menu-4-0-exec = sh /home/vic/.config/i3lock/lock.sh && sleep 1
 menu-4-1 =  %{F#A4A4A4}Back%{F-}
 menu-4-1-font = 0
 menu-4-1-exec = menu-open-0
 
 menu-5-0 = %{F#FFD079}%{F-} %{F#D4B06C}Suspend%{F-}
 menu-5-0-font = 0
-menu-5-0-exec = systemctl suspend && sh /home/lubomir/.config/lock.sh && sleep 1
+menu-5-0-exec = systemctl suspend && sh /home/vic/.config/i3lock/lock.sh && sleep 1
 menu-5-1 =  %{F#A4A4A4}Back%{F-}
 menu-5-1-font = 0
 menu-5-1-exec = menu-open-0
