add ncmpcpp and mpd files...made utilities module for polybar...update scrots and clean up

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -9,17 +9,12 @@
 ;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
 ;
 ;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/polybar/polybar
-;
-;   The README contains a lot of information
-;
 ;==========================================================
 
 [colors]
 background = #111111
 foreground = #D8DEE9
-white      = #D8DEE9
+white      = #dedede
 black      = #0f0f0f
 grey       = #464b51
 red        = #e41936
@@ -32,11 +27,11 @@ orange     = #ff3a0f
 
 [bar/main]
 monitor = HDMI1
-width = 55%
+width = 55.1%
 height = 28
 offset-x = 22.5%
 offset-y = 1%
-radius = 2.0
+radius = 0
 fixed-center = true
 bottom = false
 
@@ -69,16 +64,18 @@ module-margin-right = 0
 ; The separator will be inserted between the output of each module
 ;separator = %{F#D8DEE9}|%{F-}
 
-font-0 = iosevka:pixelsize=9;2
+font-0 = DejaVuSans:pixelsize=9;2
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=9;1
 font-3 = FontAwesome:pixelsize=9;2
 font-4 = Monaco:pixelsize=9;2
 font-5 = Hack Nerd Font:size=13;2
 
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
 modules-left = rofi bspwm  
 modules-center = mpd spotify xwindow 
-modules-right = date time powermenu
+modules-right = date time utilities powerkde
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
 
 tray-position = right
 tray-padding = 0
@@ -91,10 +88,14 @@ tray-padding = 0
 cursor-click = pointer
 cursor-scroll = ns-resize
 
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
+
 [module/updates-arch-combined]
 type = custom/script
 exec = ~/.config/polybar/scripts/updates-arch-combined.sh
 interval = 600
+
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
 
 [module/xwindow]
 type = internal/xwindow
@@ -103,6 +104,8 @@ label-foreground = ${colors.white}
 
 wm-restack = bspwm
 ;override-redirect = true
+
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
 
 [module/bspwm]
 type = internal/bspwm
@@ -139,6 +142,8 @@ ws-icon-5 =5
 ;ws-icon-default = 
 ws-icon-default = 
 
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
+
 [module/backlight]
 type = internal/xbacklight
 
@@ -172,6 +177,8 @@ bar-indicator = |
 bar-fill = ─
 bar-empty = ─
 
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
+
 [module/rofi]
 type = custom/script 
 label-padding = 0
@@ -179,7 +186,9 @@ label-foreground = ${colors.orange}
 ;label-background = ${colors.orange}
 interval = 120
 exec = echo "    "
-click-left = "rofi -show drun -theme ~/.config/rofi/themes/sidetab >/dev/null 2>&1 &"
+click-left = "rofi -show drun -theme ~/.config/rofi/themes/miminal >/dev/null 2>&1 &"
+
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
 
 [module/time]
 type = internal/date
@@ -196,6 +205,8 @@ label-foreground = ${colors.orange}
 ;label-background = ${colors.orange}
 ;label-padding    = 2
 
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
+
 [module/date]
 type = internal/date
 
@@ -210,6 +221,8 @@ label            = %date%
 label-foreground = ${colors.white}
 ;label-background = ${colors.blue}
 label-padding    = 2
+
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
 
 [module/weather]
 type = custom/script
@@ -226,6 +239,8 @@ interval = 600
 ;label-background = ${colors.blue}
 ;label-padding    = 2
 
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
+
 [module/kernel]
 type = custom/script
 exec = uname -r
@@ -239,6 +254,8 @@ format-prefix-foreground = ${colors.white}
 ;format-prefix-background = ${colors.background}
 ;format-underline = ${colors.red}
 
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
+
 [module/bluetooth]
 type = custom/script
 exec = .config/polybar/scripts/bluetooth.sh
@@ -249,6 +266,8 @@ format-padding = 1
 #format-background = ${colors.black}
 format-foreground = ${colors.blue}
 
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
+
 [module/spotify]
 type = custom/script
 interval = 1
@@ -257,6 +276,8 @@ format = <label>
 exec = python .config/polybar/scripts/spotify_status.py -f '{play_pause} {song} - {artist} - {album}' --font=0 -p '[playing],[paused]' --playpause-font=0
 #format-underline = ${colors.blue}
 format-foreground = ${colors.white}
+
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
 
 [module/mpd]
 type = internal/mpd
@@ -322,11 +343,15 @@ bar-progress-fill-font = 3
 bar-progress-empty-font = 3
 bar-progress-empty-foreground = ${colors.foreground-alt}
 
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
+
 ;[module/uptime]
 ;type = custom/script
 ;label = %{F#a6bbc0}%output%%{F-}
 ;exec = uptime -p
 ;interval = 5
+
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
 
 ;[module/home]
 ;type = internal/fs
@@ -348,6 +373,8 @@ bar-progress-empty-foreground = ${colors.foreground-alt}
 ;label-unmounted = %mountpoint% not mounted
 ;label-unmounted-foreground = ${colors.foreground-alt}
 
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
+
 [module/filesystem]
 type = internal/fs
 interval = 25
@@ -367,6 +394,8 @@ mount-0 = /
 label-mounted = %{F#a6bbc0}  %percentage_used%%%{F-}
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.blue}
+
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
 
 [module/memory]
 type = internal/memory
@@ -392,6 +421,8 @@ bar-used-gradient = false
 bar-used-indicator = 
 bar-used-indicator-font = 0
 
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
+
 [module/temperature]
 type = internal/temperature
 thermal-zone = 0
@@ -415,6 +446,8 @@ ramp-2 = 
 
 ramp-foreground = ${colors.foreground}
 
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
+
 [module/cpu]
 type = internal/cpu
 
@@ -435,6 +468,8 @@ format = <label>
 ;   %percentage-core[1-9]% - load percentage for specific core
 label = %{F#a6bbc0}CPU %percentage%%%{F-}
 
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
+
 [module/vu-l]
 type = custom/script
 
@@ -444,6 +479,8 @@ label = [ %output%
 format = <label>
 
 exec = ~/.config/polybar/scripts/vu-meter/vu.py
+
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -505,6 +542,8 @@ bar-volume-empty = :
 bar-volume-empty-font = 0
 bar-volume-empty-foreground = ${colors.grey}
 
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
+
 [module/keyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
@@ -529,6 +568,8 @@ label-indicator-margin = 1
 label-indicator-background = ${colors.blue}
 ;label-indicator-overline = ${colors.blue}
 
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
+
 [module/wireless]
 type = internal/network
 interface = wlp1s0
@@ -551,6 +592,8 @@ ramp-signal-3 = 
 ramp-signal-4 = 
 ramp-signal-foreground = ${colors.blue}  
 
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
+
 [module/eth]
 type = internal/network
 interface = enp7s0
@@ -564,6 +607,8 @@ format-connected-prefix-foreground = ${colors.white}
 label-connected = %local_ip%
 
 format-disconnected =
+
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
 
 [module/powermenu]
 type = custom/menu
@@ -632,6 +677,21 @@ menu-5-0-exec = systemctl suspend && sh /home/vic/.config/i3lock/lock.sh && slee
 menu-5-1 =  %{F#A4A4A4}Back%{F-}
 menu-5-1-font = 0
 menu-5-1-exec = menu-open-0
+
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
+
+[module/powerkde]
+type = custom/script 
+label-padding = 0
+label-foreground = ${colors.white}
+;label-background = ${colors.orange}
+interval = 120
+modules-right = date time powerkde
+exec = echo ""
+click-left = qdbus org.kde.ksmserver /KSMServer logout 1 3 3
+click-right = sh /home/vic/.config/i3lock/lock.sh && sleep 1
+
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
 
 [module/battery]
 type = internal/battery
@@ -732,12 +792,16 @@ animation-discharging-4 = 
 ; Framerate in milliseconds
 animation-discharging-framerate = 500
 
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
+
 [module/system-usb-udev]
 type = custom/script
 exec = ~/.config/polybar/scripts/system-usb-udev.sh
 tail = true
 click-left = ~/.config/polybar/scripts/system-usb-udev.sh --mount &
 click-right = ~/.config/polybar/scripts/system-usb-udev.sh --unmount &
+
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
 
 [module/variety]
 type = custom/script
@@ -753,12 +817,26 @@ format-prefix-foreground = #FFFFF
 click-right = variety --preferences
 click-left = variety --selector
 
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
+
+[module/utilities]
+type = custom/text
+content = 
+content-background = ${colors.background}
+content-foreground = ${colors.foreground}
+content-padding = 2
+
+click-left = ~/.config/rofi/scripts/utilities_rofi.sh &
+
+;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
+
 [settings]
 screenchange-reload = true
 ;compositing-background = xor
 ;compositing-background = screen
 ;compositing-foreground = source
 ;compositing-border = over
+
 
 [global/wm]
 margin-top = 5
