--- a/.config/cava/config
+++ b/.config/cava/config
@@ -21,9 +21,9 @@
 
 # The number of bars (0-200). 0 sets it to auto (fill up console).
 # Bars' width and space between bars in number of characters.
-; bars = 0
-; bar_width = 2
-; bar_spacing = 1
+ bars = 62
+ bar_width = 1
+ bar_spacing = 1
 
 
 # Lower and higher cutoff frequencies for lowest and highest bars
@@ -97,14 +97,14 @@
 # Or defined by hex code '#xxxxxx' (hex code must be within ''). User defined colors requires a
 # terminal that can change color definitions such as Gnome-terminal or rxvt.
 #background = '#2f3336'
-foreground = '#ff4500'
+#foreground = '#ff4500'
 
 # Gradient mode, only hex defined colors are supported, background must also be defined in hex
 # or remain commented out. 1 = on, 0 = off. Warning: for certain terminal emulators cava will
 # not able to restore color definitions on exit, simply restart your terminal to restore colors.
-; gradient = 0
-; gradient_color_1 = '#a12b00'
-; gradient_color_2 = '#ff3a0f'
+ gradient = 1
+ gradient_color_1 = '#808080'
+ gradient_color_2 = '#ff3a0f'
 
 
 
