update ncmpcpp config

--- a/.ncmpcpp/config
+++ b/.ncmpcpp/config
@@ -31,7 +31,7 @@ discard_colors_if_item_is_selected = "yes"
 autocenter_mode = "yes"
 header_visibility = "no" 
 statusbar_visibility = "no"
-titles_visibility = "yes"
+titles_visibility = "no"
 display_bitrate = "yes"
 playlist_separate_albums = "no"
 ask_before_clearing_playlists = "no"
@@ -61,13 +61,13 @@ visualizer_color = 255,255,255,255,255,255,255,255,255,15,15
 #progressbar_look = "=>"
 #progressbar_look = "─- "
 #progressbar_look = "▒▒░"
-progressbar_look = "┅┅┄"
+#progressbar_look = "┅┅┄"
 #progressbar_look = "─⊙┄"
 #progressbar_look = "─➞─"
 #progressbar_look = "─┅─"
 #progressbar_look = "▪▪▪"
 #progressbar_look = "▪▪▫"
-#sqprogressbar_look = "───"
+progressbar_look = "───"
 #progressbar_look = "▁▁▁"
 #progressbar_look = "‒‒‒"
 #progressbar_look = "■◣ "
@@ -84,4 +84,4 @@ visualizer_type = "spectrum" (spectrum/wave/ellipse)
 #visualizer_type = "ellipse" (spectrum/wave/ellipse)
 visualizer_in_stereo = "yes"
 #visualizer_look = "+|"
-visualizer_look = "●▮"
+visualizer_look = "::"
