update polybar configs

--- a/.config/polybar/config2.ini
+++ b/.config/polybar/config2.ini
@@ -213,10 +213,10 @@ bar-used-foreground-1 = ${colors.white}
 bar-used-foreground-2 = ${colors.white}
 bar-used-foreground-3 = ${colors.white}
 bar-used-foreground-4 = ${colors.white}
-bar-used-fill = :
-bar-used-fill-font = 0
-bar-used-empty = :
-bar-used-empty-font = 0
+bar-used-fill = ■
+bar-used-fill-font = 4
+bar-used-empty = ■
+bar-used-empty-font = 4
 bar-used-empty-foreground = ${colors.grey}
 bar-used-gradient = false
 bar-used-indicator = 
@@ -324,11 +324,11 @@ bar-volume-foreground-7 = ${colors.white}
 bar-volume-foreground-8 = ${colors.white}
 bar-volume-gradient = false
 bar-volume-indicator = 
-bar-volume-indicator-font = 0
-bar-volume-fill = :
-bar-volume-fill-font = 0
-bar-volume-empty = :
-bar-volume-empty-font = 0
+bar-volume-indicator-font = 
+bar-volume-fill = ■
+bar-volume-fill-font = 4
+bar-volume-empty = ■
+bar-volume-empty-font = 4
 bar-volume-empty-foreground = ${colors.grey}
 
 ;;-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
